# Work

./: README.md
DataStructuresAndAlgorithms/assignment1/Assignment 1 DSA/: App.cpp  Bag.cpp  Bag.h  BagIterator.cpp  BagIterator.h  CMakeLists.txt
DataStructuresAndAlgorithms/assignment3/assignment3/: App.cpp  CMakeLists.txt  Node.cpp  Node.h  ShortTest.cpp  SortedSet.cpp  SortedSet.h  SortedSetIterator.cpp  SortedSetIterator.h
DataStructuresAndAlgorithms/assignment4/assignment4/: App.cpp  CMakeLists.txt  Da.h  MultiMap.cpp  MultiMap.h  MultiMapIterator.cpp  MultiMapIterator.h  Node.cpp  Node.h
DataStructuresAndAlgorithms/assignment5/assignment5/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  ListIterator.cpp  ListIterator.h  Node.cpp  Node.h  SortedIndexedList.cpp  SortedIndexedList.h
OOP/2021/assignment2/: CMakeLists.txt  README.md  Start.c
OOP/2021/assignment2/Controller/: Service.c  Service.h  UndoService.c  UndoService.h
OOP/2021/assignment2/Domain/: Estate.c  Estate.h
OOP/2021/assignment2/DynamicArray/: DA.c  DA.h
OOP/2021/assignment2/Repository/: Repo.c  Repo.h
OOP/2021/assignment2/Tests/: Tests.c  Tests.h
OOP/2021/assignment2/Ui/: Ui.c  Ui.h
OOP/2021/assignment3/: CMakeLists.txt  Start.cpp
OOP/2021/assignment3/Domain/: Movie.cpp  Movie.h
OOP/2021/assignment3/DynamicArray/: Da.h
OOP/2021/assignment3/Repository/: AdminRepo.cpp  AdminRepo.h  UserRepo.cpp  UserRepo.h
OOP/2021/assignment3/Service/: AdminService.cpp  AdminService.h  UserService.cpp  UserService.h
OOP/2021/assignment3/Tests/: Tests.cpp  Tests.h
OOP/2021/assignment3/UserInterface/: Ui.cpp  Ui.h
OOP/2021/assignment4/: CMakeLists.txt  Start.cpp
OOP/2021/assignment4/CsvRepository/: CsvRepo.h
OOP/2021/assignment4/Domain/: Movie.cpp  Movie.h
OOP/2021/assignment4/Exception/: CustomException.cpp
OOP/2021/assignment4/Service/: UserService.cpp
OOP/2021/assignment4/Tests/: Tests.cpp
OOP/2021/assignment5/: CMakeLists.txt  MoviesListModel.cpp  MoviesListModel.h  Start.cpp  gui.cpp  gui.h
OOP/2021/assignment5/CsvRepository/: CsvRepo.cpp
OOP/2021/assignment5/Domain/: Movie.cpp
OOP/2021/assignment5/Exception/: CustomException.h
OOP/2021/assignment5/HtmlRepository/: HtmlRepo.cpp
OOP/2021/assignment5/MemoryRepository/: MemoryRepo.cpp  MemoryRepo.h
OOP/2021/assignment5/Service/: AdminService.cpp  AdminService.h  UserService.h
OOP/2021/assignment5/Tests/: Tests.h
OOP/2021/assignment5/TextRepository/: TextRepo.cpp
OOP/2021/assignment5/UserInterface/: Ui.cpp
OOP/2021/assignment5/Validator/: EntityValidator.cpp
OOP/2021/assignment6/: CMakeLists.txt  Start.cpp
OOP/2021/assignment6/Domain/: Movie.cpp  Movie.h
OOP/2021/assignment6/Gui/: MoviesTableModel.cpp  MoviesTableModel.h  gui.cpp  gui.h
OOP/2021/assignment6/HtmlRepository/: HtmlRepo.h
OOP/2021/assignment6/Operation/: Operation.cpp  Operation.h  OperationExecution.h
OOP/2021/assignment6/Service/: AdminService.cpp  AdminService.h
OOP/2021/assignment6/TextRepository/: TextRepo.h
OOP/2021/assignment6/UserInterface/: Ui.h
OOP/2021/assignment6/Validator/: EntityValidator.h
OOP/2021/test1/: CMakeLists.txt  Start.cpp
OOP/2021/test1/Domain/: Gene.cpp  Gene.h
OOP/2021/test1/DynamicArray/: Da.h
OOP/2021/test1/Repository/: Repository.cpp  Repository.h
OOP/2021/test1/Service/: Service.cpp  Service.h
OOP/2021/test1/User_Interface/: Ui.cpp  Ui.h
OOP/2021/test2/: CMakeLists.txt  main.cpp
OOP/2021/test2/Domain/: BMI.cpp  BMI.h  BP.cpp  BP.h  Measurement.cpp  Measurement.h
OOP/2021/test2/Person/: Person.cpp  Person.h
OOP/2021/test2/UserInterface/: Ui.cpp  Ui.h
OOP/2021/test3/: CMakeLists.txt  Start.cpp
OOP/2021/test3/Domain/: Weather.cpp  Weather.h
OOP/2021/test3/Gui/: Gui.cpp  Gui.h
OOP/2021/test3/Repository/: Repository.cpp  Repository.h
OOP/2021/test3/Service/: Service.cpp  Service.h
OOP/2022/assignment2/: CMakeLists.txt  Start.c
OOP/2022/assignment2/Controller/: Service.c  Service.h  UndoService.c  UndoService.h
OOP/2022/assignment2/Domain/: Country.c  Country.h
OOP/2022/assignment2/DynamicArray/: DA.c  DA.h
OOP/2022/assignment2/Repository/: Repo.c  Repo.h
OOP/2022/assignment2/Tests/: Tests.c  Tests.h
OOP/2022/assignment2/Ui/: Ui.c  Ui.h
OOP/2022/assignment3/: CMakeLists.txt  Start.cpp
OOP/2022/assignment3/Domain/: Dog.cpp  Dog.h
OOP/2022/assignment3/DynamicArray/: Da.h
OOP/2022/assignment3/Repository/: AdminRepository.cpp  AdminRepository.h  BaseRepository.cpp  BaseRepository.h  UserRepository.cpp  UserRepository.h
OOP/2022/assignment3/Service/: AdminService.cpp  AdminService.h  BaseService.cpp  BaseService.h  UserService.cpp  UserService.h
OOP/2022/assignment3/Tests/: Tests.cpp  Tests.h
OOP/2022/assignment3/UserInterface/: Ui.cpp  Ui.h
OOP/2022/assignment4/: CMakeLists.txt  ClassDiagram.mdj  Start.cpp
OOP/2022/assignment4/Domain/: Dog.cpp
OOP/2022/assignment4/Service/: AdminService.cpp  UserService.cpp  UserService.h
OOP/2022/assignment4/UserInterface/: Ui.cpp  Ui.h
OOP/2022/assignment5/: CMakeLists.txt  README.md  main.cpp
OOP/2022/assignment5/Domain/: Dog.h
OOP/2022/assignment5/Exception/: CustomException.h
OOP/2022/assignment5/GUI/: GUI.cpp  GUI.h
OOP/2022/assignment5/Service/: AdminService.cpp  AdminService.h  UserService.h
OOP/2022/assignment6/: CMakeLists.txt  main.cpp
OOP/2022/assignment6/Exception/: CustomException.cpp
OOP/2022/assignment6/GUI/: DogsTableModel.cpp  DogsTableModel.h  GUI.cpp  GUI.h
OOP/2022/assignment6/Operation/: Operation.cpp  Operation.h  OperationExecution.cpp  OperationExecution.h
OOP/2022/assignment6/Service/: AdminService.cpp  AdminService.h  UserService.cpp
OOP/2022/exam/: CMakeLists.txt  main.cpp
OOP/2022/exam/Domain/: Idea.cpp  Idea.h  Writer.cpp  Writer.h
OOP/2022/exam/Exception/: CustomException.cpp  CustomException.h
OOP/2022/examPracticeQuestionAnswers/: CMakeLists.txt  main.cpp
OOP/2022/examPracticeQuiz/: CMakeLists.txt  Observer.h  main.cpp
OOP/2022/examPracticeTaskManager/: CMakeLists.txt  Observer.cpp  Start.cpp
OOP/2022/examPracticeWritten/: CMakeLists.txt  main.cpp
(+2148 files in other folders)
