cmake_minimum_required(VERSION 3.19)
project(Assignment_3___DSA)

set(CMAKE_CXX_STANDARD 20)

add_executable(Assignment_3___DSA
        Node.cpp
        Node.h
        SortedSet.cpp
        SortedSet.h
        SortedSetIterator.cpp
        SortedSetIterator.h
        ShortTest.cpp
        ShortTest.h
        ExtendedTest.cpp
        ExtendedTest.h
        App.cpp)