cmake_minimum_required(VERSION 3.19)
project(Assignment_5_DSA)

set(CMAKE_CXX_STANDARD 20)

add_executable(Assignment_5_DSA
        App.cpp
        Node.cpp
        Node.h
        SortedIndexedList.cpp
        SortedIndexedList.h
        ListIterator.cpp
        ListIterator.h
        ShortTest.cpp
        ShortTest.h
        ExtendedTest.cpp
        ExtendedTest.h)